image not showing correction

--- a/css/mobile-responsive.css
+++ b/css/mobile-responsive.css
@@ -42,7 +42,7 @@
     .banner-content{
       width: 90%;
       padding: 30px 0 0 0px;
-      background-image: url(/images/Group\ 14.png);
+      background-image: url(./images/Group\ 14.png);
       background-repeat: no-repeat;
       background-size: 100%;
       margin: 10px auto;
