--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@
 
 /* Banner section Start */
 .banner-section{
-    background-image: url(/images/Group\ 14.png);
+    background-image: url(../images/Group\ 14.png);
     background-repeat: no-repeat;
 }
 .banner-container{
